[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb2wb"
version = "0.1.3"
description = "Write in Jupyter Notebooks. Publish anywhere."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tivadar Danka"},
]
keywords = ["jupyter", "substack", "latex", "converter", "technical-writing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    # Notebook I/O and execution
    "nbformat>=5.0",
    "nbconvert>=6.0",
    "ipykernel>=6.0",    # Jupyter kernel required for .qmd cell execution
    # Rendering
    "matplotlib>=3.5",
    "Pillow>=9.0",
    "Pygments>=2.10",
    # Parsing
    "PyYAML>=6.0",
    "markdown>=3.4",
    "unicodeit>=0.7",
]

[project.urls]
Homepage = "https://github.com/the-palindrome/nb2wb"
Repository = "https://github.com/the-palindrome/nb2wb"
Issues = "https://github.com/the-palindrome/nb2wb/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort"]

[project.scripts]
nb2wb = "nb2wb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nb2wb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "latex: tests requiring LaTeX and dvipng installed",
    "slow: slow tests (e.g., full workflow tests)",
    "integration: integration tests",
    "unit: unit tests",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
